QmlPreview: Avoid more unwanted file suffixes in the file engine

Task-number: QTBUG-124468
Change-Id: Iecdb35d1cf2f201204cfd107567bf087742aa46d
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit dcfa7db433db4e5fec96936bd1b902f48346ffc1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>